# s3-iclear-search

./: .gitignore  Makefile  README.md  pyproject.toml  s3-fintrans-search-tool-requirements.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/s3-fintrans-search-ui/code/: code-summary.md
aidlc-docs/inception/requirements/: requirements.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AppLayout.tsx  EmptyState.tsx  FileTypeMultiSelect.tsx  Header.tsx  HistoryPanel.tsx  IdTextarea.tsx  ProfileDropdown.tsx  ResultsHeader.tsx  ResultsTable.tsx  ResultsView.tsx  SavedSearches.tsx  SearchForm.tsx  SearchProgress.tsx  Sidebar.tsx  TabBar.tsx  WarningsBanner.tsx
frontend/src/hooks/: useFileTypes.ts  useHistory.ts  useProfiles.ts  useSavedSearches.ts  useSearch.ts
frontend/src/state/: AppContext.tsx  reducer.ts
src/s3_search/: __init__.py  __main__.py  auth.py  bucket_resolver.py  cli.py  discovery.py  exceptions.py  models.py  renderers.py  search.py  ui_server.py
src/s3_search/api/: __init__.py  app.py  executor.py  models.py  profiles.py  session_store.py
tests/: conftest.py  test_api_app.py  test_api_executor.py  test_api_models.py  test_api_profiles.py  test_auth.py  test_bucket_resolver.py  test_cli.py  test_discovery.py  test_models.py  test_renderers.py  test_search.py
(+8 files in other folders)
