[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-iclear-search"
version = "2.0.0"
description = "CLI tool and web UI to search AWS S3 ICLEAR files for payment/account/order identifiers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "boto3>=1.26.0",
]

[project.scripts]
s3-search = "s3_search.cli:main"
s3-search-ui = "s3_search.ui_server:main"

[project.optional-dependencies]
ui = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
s3_search = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
